# redmine-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  what_to_build.md
.github/workflows/: ci.yml  release.yml
bucket/: rdm.json
openspec/: project.md
openspec/changes/add-redmine-agent-cli/: design.md  proposal.md
openspec/changes/add-scoop-bucket/: tasks.md
openspec/changes/archive/2026-01-16-add-redmine-agent-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-16-add-redmine-agent-cli/specs/cli-core/: spec.md
openspec/changes/archive/2026-01-16-add-scoop-bucket/: proposal.md
openspec/changes/archive/2026-01-16-add-scoop-bucket/specs/distribution/: spec.md
openspec/changes/enhance-cli-search-grouping/: proposal.md  tasks.md
openspec/changes/enhance-cli-search-grouping/specs/cli-core/: spec.md
openspec/specs/cli-core/: spec.md
openspec/specs/distribution/: spec.md
skills/redmine-cli-workflows/: SKILL.md
src/: error.rs  main.rs
src/cache/: mod.rs
src/cli/: issue.rs  mod.rs  ping.rs  profile.rs  project.rs  time.rs  user.rs
src/client/: endpoints.rs  mod.rs
src/config/: loader.rs  mod.rs  profile.rs
src/models/: attachment.rs  custom_field.rs  issue.rs  mod.rs  project.rs  time_entry.rs  user.rs
src/output/: envelope.rs  format.rs  markdown.rs  mod.rs
tests/: golden.rs  integration.rs
tests/common/: mod.rs
